--- a/themes/hueman/source/css/_partial/article.styl
+++ b/themes/hueman/source/css/_partial/article.styl
@@ -428,3 +428,8 @@ $article-share-link
 /* hero image */
 .hero-img
     height: 220px !important
+
+/* content image */
+.content-img
+    width: 75%
+    height: 75%
