--- a/themes/hueman/source/css/_partial/sidebar.styl
+++ b/themes/hueman/source/css/_partial/sidebar.styl
@@ -111,7 +111,11 @@
     color: #666
 
 .widget-wrap
-    padding: 30px 30px 20px
+    padding: 15px 30px 15px 20px
+
+// jose
+.widget-wrap.highlights    
+    padding-bottom: 5px
 
 .widget-title
     font-size: 15px
@@ -144,7 +148,9 @@
             list-style: disc
         ol
             list-style: decimal
-
+    img.award
+        width: 100%
+        height 100%
 .widget-list
     ul, ol
         list-style: none
