--- a/themes/hueman/source/css/_partial/footer.styl
+++ b/themes/hueman/source/css/_partial/footer.styl
@@ -3,6 +3,7 @@
     margin-top: 60px
     color: color-grey
     line-height: line-height
+    text-align: center
     a
         color: #ccc
         text-decoration: none
@@ -22,6 +23,7 @@
         display: block
         margin: 0 auto -30px
         border-radius: 0 0 3px 3px
+        float: right
         box-shadow: 0 1px 1px rgba(0,0,0,0.1)
         &:hover
             color: #444
