--- a/themes/hueman/source/css/_partial/article.styl
+++ b/themes/hueman/source/css/_partial/article.styl
@@ -70,7 +70,7 @@
             word-wrap: break-word
             a
                 transition: color 0.3s ease-in
-                color: #000
+                color: #4c4c4c
         .article-excerpt
             position: relative
             color: rgb(170, 170, 170)
