--- a/themes/hueman/source/css/_partial/sidebar.styl
+++ b/themes/hueman/source/css/_partial/sidebar.styl
@@ -150,7 +150,8 @@
             list-style: decimal
     img.award
         width: 100%
-        height 100%
+        height: 100%
+        border: 1px solid #555;
 .widget-list
     ul, ol
         list-style: none
