--- a/themes/hueman/source/css/_partial/article.styl
+++ b/themes/hueman/source/css/_partial/article.styl
@@ -182,6 +182,10 @@
         height: auto
         display: block
         margin: auto
+    img.boxed
+        max-width: 95%
+        border: 1px solid
+        padding: 5px
     iframe
         border: none
     table
