--- a/themes/hueman/source/css/style.styl
+++ b/themes/hueman/source/css/style.styl
@@ -71,13 +71,13 @@ code
     position: relative
     box-sizing: border-box
     box-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 1px 0px
-    if sidebar is right
-        padding-right: sidebar-width
-        background: url(images/s-left.png) repeat-y right 0
-    else
-        padding-left: sidebar-width
-        background: url(images/s-left.png) repeat-y left 0
-
+    &.home
+        if sidebar is right
+            padding-right: sidebar-width
+            background: url(images/s-left.png) repeat-y right 0
+        else
+            padding-left: sidebar-width
+            background: url(images/s-left.png) repeat-y left 0    
 #main
     if sidebar is right
         float: left
