--- a/themes/hueman/source/css/_partial/sidebar.styl
+++ b/themes/hueman/source/css/_partial/sidebar.styl
@@ -151,6 +151,7 @@
     img.award
         width: 100%
         height: 100%
+        border: 1px solid #eee
 .widget-list
     ul, ol
         list-style: none
