--- a/themes/hueman/layout/common/sidebar.ejs
+++ b/themes/hueman/layout/common/sidebar.ejs
@@ -21,7 +21,7 @@
         <div class="widget-wrap highlights">                
             <div class="widget">
                 <a href="https://www.sitecore.com/mvp" target="_blank">
-                    <img class="award" src="/images/mvp.gif" alt="Sitecore MVP Award" />
+                    <img class="award" src="/images/mvp-logo.jpg" alt="Sitecore MVP Award" />
                 </a>
             </div>
         </div>
